[workspace]
members = [
    "fp/utils",
    "fp/compiler",
    "fp/vm"
]
exclude = ["fp/fp_debug"]

[package]
name = "fpig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler = { path = "fp/compiler" }
vm = { path = "fp/vm" }
